# hey-leptos

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bun.lockb  index.html  package.json  tailwind.config.js
src/: main.rs
