# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "hey-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.0", features = ["csr"] }
leptos_meta = { version = "0.5.0", features = ["csr"] }
leptos_router = { version = "0.5.0", features = ["csr"] }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }

# Dependencies for client
wasm-bindgen = { version = "0.2", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
